# src/routes/user.routes.js
@@ -6,4 +6,5 @@ const userController = require("../controllers/user.controller");
 router.get("/getAll", userController.getAllUsers);
 router.get("/:username", userController.getUserByName);
 router.post("/addUser", userController.addUser);
+router.delete("/deleteUser", userController.deleteUser)
 module.exports = router;
